# zop

./: .gitignore  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
public/: ai_studio_code.txt
src/: App.css  App.tsx
src-python/: README.md  build.bat  build.sh  pyproject.toml  run.py  zop-agent.spec
src-python/zop_agent/: __init__.py  main.py  sop_agent.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  lib.rs  main.rs  sidecar.rs
src/components/: Navbar.tsx  Sidebar.tsx  Toolbar.tsx  UserInfo.tsx
src/i18n/: index.ts
src/i18n/locales/: en.json  zh.json
src/pages/: About.tsx  AiConfig.tsx  AiHome.tsx  FlowDetail.tsx  FlowExecute.tsx  Home.tsx  NewItem.tsx  Settings.tsx  TodoDetail.tsx
